# TP4_infographie

src/: 00_tp4_panneaux.sln  00_tp4_panneaux.vcxproj  CMakeLists.txt  Camera.h  Etat.cpp  Etat.h  Pipeline.h  inf2705-Singleton.h  inf2705-fenetre.h  inf2705-forme.h  inf2705-matrice.h  inf2705-nuanceur.h  inf2705-texture.h  main.cpp  makefile  nuanceurFragments.glsl  nuanceurGeometrie.glsl  nuanceurSommets.glsl  nuanceurSommetsRetroaction.glsl  remise.bat  touches.txt
src/x64/Debug/: 00_tp4_panneaux.exe.recipe  00_tp4_panneaux.ilk  00_tp4_panneaux.vcxproj.FileListAbsolute.txt  vc143.idb
src/x64/Debug/00_tp4_panneaux.tlog/: 00_tp4_panneaux.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
